Adding Slider and fix issue with responsive

--- a/styles/index.css
+++ b/styles/index.css
@@ -49,7 +49,9 @@ input:hover {
 input:focus {
   outline: none;
 }
-
+button:focus {
+  outline: none;
+}
 textarea {
   background-color: transparent;
   color: #ffffff;
